// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stylelintWarningToVscodeDiagnostic() should convert a stylelint warning into a VS Code diagnostic and consider severity level 1`] = `
Object {
  "code": "color-hex-case",
  "message": "Expected \\"#AAA\\" to be \\"#aaa\\" (color-hex-case)",
  "range": Object {
    "end": Object {
      "character": 11,
      "line": 1,
    },
    "start": Object {
      "character": 11,
      "line": 1,
    },
  },
  "severity": 1,
  "source": "stylelint",
}
`;

exports[`stylelintWarningToVscodeDiagnostic() should convert a stylelint warning into a VS Code diagnostic and consider severity level 2`] = `
Object {
  "code": "color-hex-length",
  "message": "Expected \\"#bbbbbb\\" to be \\"#bbb\\" (color-hex-length)",
  "range": Object {
    "end": Object {
      "character": 18,
      "line": 2,
    },
    "start": Object {
      "character": 18,
      "line": 2,
    },
  },
  "severity": 2,
  "source": "stylelint",
}
`;
